[gd_scene load_steps=9 format=3 uid="uid://dc4lbtbkvs80q"]

[ext_resource type="Script" uid="uid://ogdely3vip6r" path="res://scrips/pause.gd" id="1_5rk4c"]
[ext_resource type="Texture2D" uid="uid://nqkbiqx6d24h" path="res://Assents/1.webp" id="1_jd7g0"]
[ext_resource type="Shader" uid="uid://btcvm7j8jv1tv" path="res://Escenas/pause.gdshader" id="1_vwj5l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5rk4c"]
shader = ExtResource("1_vwj5l")
shader_parameter/lod = 0.869

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vwj5l"]
bg_color = Color(0.439216, 0, 0.439216, 1)

[sub_resource type="Animation" id="Animation_0rus2"]
resource_name = "ses"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/ColorRect:material:shader")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_vwj5l")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/ColorRect:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.869]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2m6c2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/ColorRect:material:shader")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_vwj5l")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/ColorRect:material:shader_parameter/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.869]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xx4gx"]
_data = {
&"RESET": SubResource("Animation_2m6c2"),
&"ses": SubResource("Animation_0rus2")
}

[node name="pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5rk4c")

[node name="CenterContainer" type="CenterContainer" parent="."]
light_mask = 0
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
material = SubResource("ShaderMaterial_5rk4c")
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CenterContainer/ColorRect"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 0
offset_right = 400.0
offset_bottom = 400.0
texture = ExtResource("1_jd7g0")
expand_mode = 1

[node name="continue" type="Button" parent="CenterContainer/ColorRect/TextureRect"]
offset_left = 64.0
offset_top = 275.0
offset_right = 144.0
offset_bottom = 306.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_vwj5l")
text = "𝑪𝒐𝒏𝒕𝒊𝒏𝒖𝒆"

[node name="restart" type="Button" parent="CenterContainer/ColorRect/TextureRect"]
layout_mode = 0
offset_left = 259.0
offset_top = 275.0
offset_right = 340.0
offset_bottom = 306.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_vwj5l")
text = "𝑹𝒆𝒔𝒕𝒂𝒓𝒕"

[node name="exit" type="Button" parent="CenterContainer/ColorRect/TextureRect"]
offset_left = 162.0
offset_top = 332.0
offset_right = 243.0
offset_bottom = 363.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_vwj5l")
text = "𝑬𝒙𝒊𝒕"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xx4gx")
}

[connection signal="pressed" from="CenterContainer/ColorRect/TextureRect/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/ColorRect/TextureRect/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer/ColorRect/TextureRect/exit" to="." method="_on_exit_pressed"]
